SubVersion: $Id$

To do:
	- video scaling
	- link port is broken (HW2 only ?!)
	- stealth I/O and mem protect (done but not enabled)

- 25/02/2005, version 1.80o: roms
	- fixed bug in ti68k_get_hw_param_block (wrong search/replace)
	- fixed TAB char (0x09) pb in the dbg_mem window (Lionel)
	- handles are now displayed fine with PedRom

- 18/02/2005, version 1.80n: roms
	- fixed FLASH writes with HW3 patch
	- fixed Step Over on the following FLINEs : 0xfff0, 0xfff2, 0xffee.
	- fixed Hardware Parameter Block when converting FLASH upgrade
	- the Windows(tm) MENU key raises the popup menu for now
	- fixed disassemblling of 0xffee and 0xffef FLINEs
	- changed engine_start/stop architecture to remove some menu locks/bugs
	- fix: ROM call combo box: does not jump to call when names contains '/'
	- fix: don't reload ROM calls when changing AMS without chaning calc type
	- show vector name rather than number
	- dis-assemble FLINE with __ld_entry_point
	- dis-assemble FLINE with _bcd_math followed by FPU pseudo-opcode
	- clean-up and improvements in the misc menu (help)
	- fixed status bar display in the bkpts dbox
	- some items of the popup menu are disabled when the engine is running
	- save FLASH segment which have been written/erased
	- added FPU dis-assembler
	- fixed/improved some endianess issues
	- pedrom tibs are now placed in the 'pedrom' folder. The wizard let you import them 
		automatically.
	- fix problem of path with scan_images under Linux
	- fixed/improved mem allocation in images.c
	- added program entry breakpoint feature (AMS < 2.00 only)

- 07/02/2005, version 1.80m: roms
	- dbus architecture improved (reset)
	- fixed and tested linkport support with real cables: GrayLink, BlackLink, VTi and TiEmu.
	- tested: TiLP/VTi (vti), VTi/TiEmu (vti), TiLP/TiEmu (tie).
	- SilverLink makes TiEmu crash.
	- 0x200000 and 0x400000 are ghost of 0x000000 (Titanium only)
	- added 0x7100xx ports and fixed LCD address on HW2/HW3
	- real grayscale emulation for HW2/HW3